Ramu | MOBN-198 | Fix "choose multiple" text overlap with textbox.

--- a/src/app/elements/text-box/text-box.component.scss
+++ b/src/app/elements/text-box/text-box.component.scss
@@ -19,7 +19,7 @@ button{
 .hint {
   font-size: 11px;
   display: inline-block;
-  padding: 5px 10px 0;
+  padding: 5px 5px 0 5px;
   margin: 15px 0 0;
 }
 textarea{
