--- a/src/styles.scss
+++ b/src/styles.scss
@@ -62,8 +62,13 @@ body {
     right: 20px;
     top: 8px;
   }
+  .tabular-concept{
+    margin-bottom: 10px;
+  }
+  .concept-set{
+    margin-top: -20.8px !important;
+  }  
 }
-
 
 .code-sheet-question{
   flex: 1;
